www/versioned_docs/version-8.6.0/API/interfaces/UniversalDetails.md
---
id: 'UniversalDetails'
title: 'Interface: UniversalDetails'
sidebar_label: 'UniversalDetails'
sidebar_position: 0
custom_edit_url: null
---

## Properties

### nonce

• `Optional` **nonce**: [`BigNumberish`](../modules.md#bignumberish)

#### Defined in

[src/account/types/index.type.ts:64](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/account/types/index.type.ts#L64)

---

### blockIdentifier

• `Optional` **blockIdentifier**: [`BlockIdentifier`](../modules.md#blockidentifier)

#### Defined in

[src/account/types/index.type.ts:65](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/account/types/index.type.ts#L65)

---

### tip

• `Optional` **tip**: [`BigNumberish`](../modules.md#bignumberish)

#### Defined in

[src/account/types/index.type.ts:66](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/account/types/index.type.ts#L66)

---

### paymasterData

• `Optional` **paymasterData**: [`BigNumberish`](../modules.md#bignumberish)[]

#### Defined in

[src/account/types/index.type.ts:67](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/account/types/index.type.ts#L67)

---

### accountDeploymentData

• `Optional` **accountDeploymentData**: [`BigNumberish`](../modules.md#bignumberish)[]

#### Defined in

[src/account/types/index.type.ts:68](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/account/types/index.type.ts#L68)

---

### nonceDataAvailabilityMode

• `Optional` **nonceDataAvailabilityMode**: [`EDataAvailabilityMode`](../namespaces/RPC.RPCSPEC09.API.md#edataavailabilitymode)

#### Defined in

[src/account/types/index.type.ts:69](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/account/types/index.type.ts#L69)

---

### feeDataAvailabilityMode

• `Optional` **feeDataAvailabilityMode**: [`EDataAvailabilityMode`](../namespaces/RPC.RPCSPEC09.API.md#edataavailabilitymode)

#### Defined in

[src/account/types/index.type.ts:70](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/account/types/index.type.ts#L70)

---

### version

• `Optional` **version**: [`BigNumberish`](../modules.md#bignumberish)

#### Defined in

[src/account/types/index.type.ts:71](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/account/types/index.type.ts#L71)

---

### resourceBounds

• `Optional` **resourceBounds**: [`ResourceBoundsBN`](../modules.md#resourceboundsbn)

#### Defined in

[src/account/types/index.type.ts:72](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/account/types/index.type.ts#L72)

---

### skipValidate

• `Optional` **skipValidate**: `boolean`

#### Defined in

[src/account/types/index.type.ts:73](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/account/types/index.type.ts#L73)
